packages/webassemblyjs/test/fixtures/conversions/type-errors/trunc_s-i64-f64/module.wast
(module (func (result i64) (i64.trunc_s/f64 (i32.const 0))))
